tests/fixtures/negative/style/RedundantVisibilityModifier.kt
package style

fun foo() {}

internal class Bar {
    private val x = 1
}
